--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -43,6 +43,7 @@
                         android:layout_marginRight="16dp"
                         android:ems="10"
                         android:hint="@string/nickname"
+                        android:background="@android:color/transparent"
                         android:inputType="textPersonName"
                         app:layout_constraintLeft_toLeftOf="parent"
                         tools:layout_editor_absoluteY="66dp" />
