--- a/app/src/main/res/layout/welcome_slide1.xml
+++ b/app/src/main/res/layout/welcome_slide1.xml
@@ -22,7 +22,7 @@
             android:layout_margin="20dp"
             android:layout_marginBottom="10dp"
             android:contentDescription="@string/screen_shot"
-            app:srcCompat="@drawable/simulator_screen_shot_iphone_x" />
+            app:srcCompat="@drawable/screenshot" />
 
     </LinearLayout>
 
