--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center_vertical|center_horizontal"
     android:orientation="vertical"
-    android:paddingTop="50dp"
+    android:paddingTop="20dp"
     android:background="@color/bg_slider">
 
     <LinearLayout
@@ -20,10 +20,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="20dp"
-            android:adjustViewBounds="false"
             android:contentDescription="@string/ray"
-            android:cropToPadding="false"
-            app:srcCompat="@drawable/ray" />
+            android:tint="@color/pp_ray_pink"
+            app:srcCompat="@drawable/ic_ray" />
 
     </LinearLayout>
 
