--- a/app/src/main/res/layout/transaction_list_item.xml
+++ b/app/src/main/res/layout/transaction_list_item.xml
@@ -113,11 +113,13 @@
         android:paddingBottom="4dp"
         android:orientation="vertical">
 
-        <TextView
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/subtitle_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView"
+            android:maxLines="1"
+            app:autoSizeTextType="uniform"
             app:layout_constraintBottom_toTopOf="@+id/terms_text"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
