--- a/app/src/main/res/layout/settings_tab.xml
+++ b/app/src/main/res/layout/settings_tab.xml
@@ -125,6 +125,53 @@
                 android:minHeight="0.5dp" />
 
             <TableRow
+                android:id="@+id/rowLanguage"
+                android:layout_width="match_parent"
+                android:background="@android:color/background_light"
+                android:minHeight="44dp">
+
+                <ImageView
+                    android:id="@+id/languageImage"
+                    android:layout_width="29dp"
+                    android:layout_height="29dp"
+                    android:layout_marginTop="7.5dp"
+                    android:contentDescription="@string/todo"
+                    android:cropToPadding="false"
+                    android:src="@mipmap/settings_tell_a_friend" />
+
+                <TextView
+                    android:id="@+id/languageText"
+                    android:layout_width="match_parent"
+                    android:height="44dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/language" />
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/languageArrow"
+                        android:layout_width="8dp"
+                        android:layout_height="13dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginRight="16dp"
+                        android:contentDescription="@string/todo"
+                        android:src="@mipmap/arrow_right" />
+                </RelativeLayout>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/PayPro_Line"
+                android:minHeight="0.5dp" />
+
+            <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="30dp"
